--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.41MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.60MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-176.3KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇷🇺 俄罗斯联邦-171.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇨🇳 中国-9.13MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: cfbabf31-2cf6-40ca-9688-abbb682370aa, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-151.6KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
   - {name: 🇨🇳 中国-9.69MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 32002, type: trojan, password: cfbabf31-2cf6-40ca-9688-abbb682370aa, sni: cn.speedabc.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-462.0KB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42006, type: trojan, password: cfbabf31-2cf6-40ca-9688-abbb682370aa, sni: cn.speedabc.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-17.94MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42011, type: trojan, password: cfbabf31-2cf6-40ca-9688-abbb682370aa, sni: cn.speedabc.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-416.9KB/s(Youtube:不良林), server: 139.99.123.156, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-171.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.94MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-416.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-171.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.94MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-416.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-171.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.94MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-416.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-171.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.94MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-416.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-171.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.94MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-416.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-171.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.94MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-416.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-171.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-151.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-9.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-462.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.94MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-416.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
