--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,35 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.73MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: c8s2.jamjams.net, port: 30162, type: ss, cipher: aes-256-gcm, password: eWh5br48eraTyoJS}
-  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: c8s1.jamjams.net, port: 30162, type: ss, cipher: aes-256-gcm, password: eWh5br48eraTyoJS}
+  - {name: 🇨🇳 中国-773.3KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1260, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇫🇷 法国-1.79MB/s(Youtube:不良林), server: 51.68.163.197, port: 443, type: vmess, uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.68.163.197}}
+  - {name: 🇫🇷 法国-1.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-1.46MB/s(Youtube:不良林), server: 51.89.42.154, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.42.154}}
+  - {name: 🇮🇳 印度-1.09MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -44,26 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
