--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-773.3KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1260, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇫🇷 法国-1.79MB/s(Youtube:不良林), server: 51.68.163.197, port: 443, type: vmess, uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.68.163.197}}
-  - {name: 🇫🇷 法国-1.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-1.46MB/s(Youtube:不良林), server: 51.89.42.154, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.42.154}}
-  - {name: 🇮🇳 印度-1.09MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇫🇷 法国-1.83MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-1.39MB/s(Youtube:不良林), server: 51.89.42.154, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.42.154}}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.71MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-773.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.83MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
