--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-238.0KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-585.4KB/s(Youtube:不良林), server: c8s2.jamjams.net, port: 30162, type: ss, cipher: aes-256-gcm, password: eWh5br48eraTyoJS}
-  - {name: 🇷🇺 俄罗斯联邦-942.1KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.85MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-525.2KB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-238.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-942.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
+      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-238.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-942.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
+      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-238.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-942.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
+      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-238.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-942.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
+      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-238.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-942.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
+      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-238.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-942.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
+      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-238.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-585.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-942.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
+      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
