--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,9 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.85MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-525.2KB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-992.1KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-975.5KB/s(Youtube:不良林), server: c8s2.jamjams.net, port: 30162, type: ss, cipher: aes-256-gcm, password: eWh5br48eraTyoJS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +16,18 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-992.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-975.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-992.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-975.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,10 +35,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-992.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-975.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,20 +49,18 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-992.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-975.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-992.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-975.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -74,10 +68,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-992.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-975.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,10 +87,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.85MB/s(Youtube:不良林)
-      - 🇬🇧 英国-525.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-992.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-975.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
